feat: update scratch notebook

--- a/notebook/scratch.ipynb
+++ b/notebook/scratch.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "  'splitter_type': 'RecursiveCharacterTextSplitter'}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "['default']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -785,19 +785,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-24 14:08:52.332\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: 2005.11401 (arxiv)\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:08:54.827\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 731 chunks to the vectorstore\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:08:54.828\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: 2104.07567 (arxiv)\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:08:57.593\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 838 chunks to the vectorstore\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:08:57.595\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: Generative Artificial Intelligence (wikipedia)\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:08:59.204\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 157 chunks to the vectorstore\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:08:59.205\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: Large Language Models (wikipedia)\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:09:00.856\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 129 chunks to the vectorstore\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:09:00.857\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: https://lilianweng.github.io/posts/2023-06-23-agent/ (website)\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:09:02.115\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 448 chunks to the vectorstore\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:09:02.116\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: https://lilianweng.github.io/posts/2020-10-29-odqa/ (website)\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:09:04.019\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 505 chunks to the vectorstore\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:09:04.020\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m330\u001b[0m - \u001b[1mFinished hydrating vector database with 6 documents\u001b[0m\n"
+      "\u001b[32m2025-03-30 22:08:31.260\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: 2005.11401 (arxiv)\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:34.131\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 731 chunks to the vectorstore\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:34.132\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: 2104.07567 (arxiv)\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:37.025\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 838 chunks to the vectorstore\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:37.026\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: Generative Artificial Intelligence (wikipedia)\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:38.509\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 155 chunks to the vectorstore\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:38.510\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: Large Language Models (wikipedia)\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:40.173\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 129 chunks to the vectorstore\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:40.180\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: https://lilianweng.github.io/posts/2023-06-23-agent/ (website)\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:41.691\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 448 chunks to the vectorstore\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:41.692\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mProcessing source: https://lilianweng.github.io/posts/2020-10-29-odqa/ (website)\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:43.791\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msplit_and_add_documents\u001b[0m:\u001b[36m279\u001b[0m - \u001b[1mAdded 505 chunks to the vectorstore\u001b[0m\n",
+      "\u001b[32m2025-03-30 22:08:43.792\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mhydrate_vector_db\u001b[0m:\u001b[36m330\u001b[0m - \u001b[1mFinished hydrating vector database with 6 documents\u001b[0m\n"
      ]
     }
    ],
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "id": "ZkEYSAyGdTgL"
    },
@@ -894,10 +894,11 @@
     "        }\n",
     "\n",
     "        # self.hf_token = os.getenv('HF_TOKEN')\n",
+    "        self.top_k = top_k\n",
     "\n",
     "        self.vdm = vector_db_manager\n",
     "        # self.vectorstore = vdm.vectorstore\n",
-    "        self.retriever = vdm.vectorstore.as_retriever(search_kwargs={\"k\": top_k})\n",
+    "        # self.retriever = vdm.vectorstore.as_retriever(search_kwargs={\"k\": top_k})\n",
     "\n",
     "        if use_mistral:\n",
     "            self.llm = self._init_mistral(mistral_model_name)\n",
@@ -925,6 +926,23 @@
     "            'vectorstore': self.vdm.get_config()\n",
     "        }\n",
     "        return summary\n",
+    "    \n",
+    "    @property\n",
+    "    def retriever(self):\n",
+    "        \"\"\"default to top-k search where k is a fixed value specified at the time of instantiation)\"\"\"\n",
+    "        return self.vdm.vectorstore.as_retriever(search_kwargs={\"k\": self.top_k})\n",
+    "    \n",
+    "    def get_retriever_with_top_k(self, top_k: int = 4):\n",
+    "        \"\"\"default to top-k search (k is fixed at instantiation)\"\"\"\n",
+    "        return self.vdm.vectorstore.as_retriever(search_kwargs={\"k\": top_k})\n",
+    "    \n",
+    "    def get_retriever_with_mmr(self):\n",
+    "        \"\"\"maximum marginal relevance search\"\"\"\n",
+    "        return self.vdm.vectorstore.as_retriever(search_type=\"mmr\", search_kwargs={\"k\": self.top_k})\n",
+    "    \n",
+    "    def get_retriever_with_sim_score_threshold(self, threshold: float = 0.5):\n",
+    "        \"\"\"set a retrieval method that sets a similarity score threshold and only returns documents with a score above that threshold\"\"\"\n",
+    "        return self.vdm.vectorstore.as_retriever(search_type=\"similarity_score_threshold\", search_kwargs={\"score_threshold\": 0.5})\n",
     "\n",
     "    def _load_template(self, template_path: str) -> str:\n",
     "        try:\n",
@@ -998,7 +1016,7 @@
     "            f\"Document {i + 1}:\\n{doc.page_content}\" for i, doc in enumerate(docs)\n",
     "        )\n",
     "\n",
-    "    def query_vectorstore(self, query: str) -> List[Any]:\n",
+    "    def query_vectorstore(self, query: str, retriever: ) -> List[Any]:\n",
     "        \"\"\"Get retrieved documents for a query.\"\"\"\n",
     "        return self.retriever.invoke(query)\n",
     "\n",
@@ -1072,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "id": "0m_ttO3Oc93_"
    },
@@ -1088,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "id": "bblSPMLjdbgo"
    },
@@ -1106,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,37 +1180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-24 14:11:06.015\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m_init_cohere\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1mInitializing Cohere model\u001b[0m\n",
-      "\u001b[32m2025-03-24 14:11:06.173\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m_init_mistral\u001b[0m:\u001b[36m104\u001b[0m - \u001b[1mInitializing Mistral model: mistralai/Mistral-7B-Instruct-v0.2\u001b[0m\n",
-      "`low_cpu_mem_usage` was None, now default to True since model is quantized.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20d7a7eb7fcd40f086fd458dd3385d93",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use cuda:0\n"
+      "\u001b[32m2025-03-30 22:09:28.838\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m_init_cohere\u001b[0m:\u001b[36m150\u001b[0m - \u001b[1mInitializing Cohere model\u001b[0m\n"
      ]
     }
    ],
@@ -1207,21 +1202,21 @@
     "    mistral_model_name=SupportedGeneratorModels.MistralInstructV2.value,\n",
     "    top_k=4,\n",
     ")\n",
-    "rag_system_mistral = RAGSystem(\n",
-    "    vector_db_manager=vdm,\n",
-    "    engineering_template_path=active_engineering_template,\n",
-    "    marketing_template_path=active_marketing_template,\n",
-    "    cohere_api_key=cohere_api_key,\n",
-    "    use_mistral=True,\n",
-    "    use_cohere=False,\n",
-    "    mistral_model_name=SupportedGeneratorModels.MistralInstructV2.value,\n",
-    "    top_k=4,\n",
-    ")"
+    "# rag_system_mistral = RAGSystem(\n",
+    "#     vector_db_manager=vdm,\n",
+    "#     engineering_template_path=active_engineering_template,\n",
+    "#     marketing_template_path=active_marketing_template,\n",
+    "#     cohere_api_key=cohere_api_key,\n",
+    "#     use_mistral=True,\n",
+    "#     use_cohere=False,\n",
+    "#     mistral_model_name=SupportedGeneratorModels.MistralInstructV2.value,\n",
+    "#     top_k=4,\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1233,6 +1228,28 @@
    "source": [
     "# rag_system = rag_system_mistral\n",
     "rag_system = rag_system_cohere"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'RAGSystem' object has no attribute 'top_k'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mrag_system\u001b[49m\u001b[43m.\u001b[49m\u001b[43mretriever\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 91\u001b[39m, in \u001b[36mRAGSystem.retriever\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     89\u001b[39m \u001b[38;5;129m@property\u001b[39m\n\u001b[32m     90\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mretriever\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m91\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.vdm.vectorstore.as_retriever(search_kwargs={\u001b[33m\"\u001b[39m\u001b[33mk\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtop_k\u001b[49m})\n",
+      "\u001b[31mAttributeError\u001b[39m: 'RAGSystem' object has no attribute 'top_k'"
+     ]
+    }
+   ],
+   "source": [
+    "rag_system.retriever"
    ]
   },
   {
