add list of experiments for posthoc evals

--- a/notebook/scratch2.ipynb
+++ b/notebook/scratch2.ipynb
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2717,6 +2717,196 @@
    "source": [
     "for run in todays_llm_runs:\n",
     "    print(run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List all projects/experiments\n",
+    "experiments = client.list_projects()\n",
+    "\n",
+    "# Extract just the names\n",
+    "experiment_names = [exp.name for exp in experiments]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co50-k4-mmr-4fcfbbf2',\n",
+       " 'evaluators',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co100-k4-similarity_score_threshold-0.5-fa482a34',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co100-k4-multi_query-0e0789a7',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co100-k4-mmr-977ceab7',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co100-k4-similarity_score_threshold-0.8-52d60819',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co100-k4-similarity_score_threshold-0.5-2fd62586',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co100-k12-e98ed0c6',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co100-k8-510ab02b',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co100-k4-54318433',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co100-k4-fa0bd904',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-MiniLM-L6-v2-cs128-co0-k4-1ee02f64',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co50-k4-multi_query-75e92668',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co50-k4-mmr-9aff4b6c',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs2048-co100-k4-6392f7d1',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co50-k4-similarity_score_threshold-0.8-649062ed',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co50-k4-similarity_score_threshold-0.5-0d4bd4b0',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs2048-co50-k4-ff65e6d9',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co50-k12-08dc4d2e',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co50-k8-a8a376b7',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs2048-co0-k4-cdbe5288',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs1024-co100-k4-d95c182a',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co100-k4-a33905d0',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co50-k4-97c30c72',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs1024-co50-k4-1ab141d6',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs2048-co0-k4-7ba213d3',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs1024-co100-k4-787bfb45',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs1024-co0-k4-0446c27b',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs1024-co50-k4-c8ea3053',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs1024-co0-k4-1da2ca3b',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co100-k4-1523e304',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co50-k4-83d0e3e9',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs512-co100-k4-4ec52b43',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs512-co50-k4-b5336770',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co0-k4-80c9c62b',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs256-co100-k4-45f81f5a',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs512-co0-k4-8b8b270e',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs256-co100-k4-d205c8b1',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs256-co50-k4-4e3fc2be',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs256-co0-k4-69cd152e',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs256-co50-k4-247bcc3d',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs256-co0-k4-9ef259d9',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-MiniLM-L6-v2-cs128-co0-k4-c07010b1',\n",
+       " 'ragas-rag-cohere-marketing-emb-multi-qa-mpnet-base-cos-v1-cs128-co0-k4-f946022f',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-distilroberta-v1-cs128-co0-k4-8a60540e',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-MiniLM-L6-v2-cs128-co0-k4-72405b4c',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs128-co0-k4-85572fb0',\n",
+       " 'ragas-rag-cohere-marketing-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-54bed670',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-cos-v1-cs128-co0-k4-39c9bcf0',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs128-co0-k4-6608621d',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-7f2ef04c',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-MiniLM-L6-v2-cs128-co0-k4-2fe25038',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-distilroberta-v1-cs128-co0-k4-54280038',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-distilroberta-v1-cs128-co0-k4-5697bf82',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-MiniLM-L6-v2-cs128-co0-k4-c787b5ab',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-distilroberta-v1-cs128-co0-k4-61b64e39',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-cos-v1-cs128-co0-k4-a9784220',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-distilroberta-v1-cs128-co0-k4-bf5dde5e',\n",
+       " 'rag-cohere-marketing-emb-multi-qa-mpnet-base-cos-v1-cs128-co0-k4-6ccc4ed6',\n",
+       " 'rag-cohere-marketing-emb-all-distilroberta-v1-cs128-co0-k4-02748a5b',\n",
+       " 'rag-cohere-engineering-emb-multi-qa-mpnet-base-cos-v1-cs128-co0-k4-97e2cfa4',\n",
+       " 'rag-cohere-engineering-emb-all-distilroberta-v1-cs128-co0-k4-b5238e31',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs512-co50-k10-9ac8fa1b',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs512-co50-k10-0117c7a6',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs1024-co50-k4-9f596f9c',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs1024-co50-k4-7c930ad6',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs1024-co0-k4-ac9117ba',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs1024-co0-k4-669df8ef',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs512-co50-k4-9c0d44db',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co50-k4-1ceeb00a',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs256-co50-k4-38f30c35',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs256-co0-k4-8230ffc2',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs512-co0-k4-14084559',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs256-co50-k4-ad7f7214',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs256-co0-k4-7203ebaa',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs512-co0-k4-6e0900cc',\n",
+       " 'ragas-rag-cohere-marketing-emb-multi-qa-mpnet-base-cos-v1-cs128-co0-k4-b3085daf',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-distilroberta-v1-cs128-co0-k4-ecc16d05',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-cos-v1-cs128-co0-k4-b89e9bfc',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-distilroberta-v1-cs128-co0-k4-8b96785b',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-MiniLM-L6-v2-cs128-co0-k4-7ce5d70f',\n",
+       " 'ragas-rag-cohere-marketing-emb-all-mpnet-base-v2-cs128-co0-k4-cd50dc1c',\n",
+       " 'ragas-rag-cohere-marketing-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-3c8a6ced',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-MiniLM-L6-v2-cs128-co0-k4-39a97909',\n",
+       " 'ragas-rag-cohere-engineering-emb-all-mpnet-base-v2-cs128-co0-k4-5a341544',\n",
+       " 'ragas-rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-0dacb6e7',\n",
+       " 'rag-cohere-engineering-emb-all-MiniLM-L6-v2-cs128-co0-k4-979c7311',\n",
+       " 'rag-cohere-engineering-emb-all-mpnet-base-v2-cs128-co0-k4-9186679e',\n",
+       " 'rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-532bef2a',\n",
+       " 'rag-mistral-marketing-emb-all-MiniLM-L6-v2-cs128-co0-k4-78370db5',\n",
+       " 'rag-mistral-marketing-emb-all-mpnet-base-v2-cs128-co0-k4-72aa2f7e',\n",
+       " 'rag-mistral-marketing-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-56b00eba',\n",
+       " 'rag-mistral-engineering-k4-emball-MiniLM-L6-v2-cs128-co0-4ecbc965',\n",
+       " 'rag-mistral-engineering-emb-all-mpnet-base-v2-cs128-co0-k4-6155b360',\n",
+       " 'rag-mistral-engineering-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-317b8d14',\n",
+       " 'rag-cohere-marketing-emb-all-MiniLM-L6-v2-cs128-co0-k4-9df1d008',\n",
+       " 'rag-cohere-marketing-emb-all-mpnet-base-v2-cs128-co0-k4-89becf4a',\n",
+       " 'rag-cohere-marketing-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-910e7b92',\n",
+       " 'rag-cohere-engineering-emb-all-MiniLM-L6-v2-cs128-co0-k4-3f1722dd',\n",
+       " 'rag-cohere-engineering-emb-all-mpnet-base-v2-cs128-co0-k4-2f6ad426',\n",
+       " 'rag-cohere-engineering-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-7cd8e6fb',\n",
+       " 'rag-cohere-marketing-emb-multi-qa-mpnet-base-dot-v1-cs128-co0-k4-2cd45704',\n",
+       " 'rag-cohere-marketing-k4-emball-distilroberta-v1-cs128-co0-f3ff400a',\n",
+       " 'rag-mistral-marketing-k4-emball-distilroberta-v1-cs128-co0-57feb67b',\n",
+       " 'rag-mistral-engineering-k4-embmulti-qa-mpnet-base-dot-v1-cs256-co0-e3372065',\n",
+       " 'rag-cohere-engineering-k4-embmulti-qa-mpnet-base-dot-v1-cs256-co0-16d54185',\n",
+       " 'rag-cohere-eval-marketing-dfb8c17e',\n",
+       " 'rag-cohere-eval-engineering-7d122131',\n",
+       " 'rag-cohere-eval-marketing-0ded4da8',\n",
+       " 'rag-cohere-eval-engineering-daa59566',\n",
+       " 'rag-mistral-eval-marketing-d0bbca6c',\n",
+       " 'rag-mistral-eval-engineering-c771cc65',\n",
+       " 'rag-eval-engineering-0e1d5a64',\n",
+       " 'default',\n",
+       " 'w267-final-project-rag-pipeline']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experiment_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 66 experiment names to filtered_experiments.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langsmith import Client\n",
+    "\n",
+    "def save_filtered_experiments_to_file(output_file=\"filtered_experiments.txt\"):\n",
+    "    # Initialize the LangSmith client\n",
+    "    client = Client()\n",
+    "    \n",
+    "    # List all projects/experiments\n",
+    "    all_experiments = client.list_projects()\n",
+    "    \n",
+    "    # Filter experiments by name pattern\n",
+    "    filtered_experiments = []\n",
+    "    for exp in all_experiments:\n",
+    "        if (\"ragas-rag-cohere-marketing-emb-all-\" in exp.name or \n",
+    "            \"ragas-rag-cohere-engineering-emb-all-\" in exp.name):\n",
+    "            filtered_experiments.append(exp.name)\n",
+    "    \n",
+    "    # Save to text file\n",
+    "    with open(output_file, 'w') as f:\n",
+    "        for name in filtered_experiments:\n",
+    "            f.write(f\"{name}\\n\")\n",
+    "    \n",
+    "    print(f\"Saved {len(filtered_experiments)} experiment names to {output_file}\")\n",
+    "    return filtered_experiments\n",
+    "\n",
+    "# Run the function\n",
+    "if __name__ == \"__main__\":\n",
+    "    save_filtered_experiments_to_file()"
    ]
   }
  ],
